--- a/tasks/templates/_navbar.html
+++ b/tasks/templates/_navbar.html
@@ -27,13 +27,15 @@
       background-color: #fff;
     }
   </style>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <!-- Barra de navegación -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="/">ScriptGenius</a>
+    <a class="navbar-brand" href="{% url 'home' %}">ScriptGenius</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -48,28 +50,25 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a href="/" class="nav-link">Inicio</a>
+          <a href="{% url 'home' %}" class="nav-link">Inicio</a>
         </li>
         <!-- Lógica de autenticación del usuario -->
         {% if user.is_authenticated %}
         <li class="nav-item">
-          <a href="{% url 'tasks_completed' %}" class="nav-link">Guiones Completados</a>
+          <a href="{% url 'guiones' %}" class="nav-link">Guiones</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'tasks' %}" class="nav-link">Guiones</a>
+          <a href="{% url 'create_guion' %}" class="nav-link">Crear Guion</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'create_task' %}" class="nav-link">Crear Guion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Cerrar Sesion</a>
+          <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a href="/signin" class="nav-link">Ingresar</a>
+          <a href="{% url 'signin' %}" class="nav-link">Ingresar</a>
         </li>
         <li class="nav-item">
-          <a href="/signup" class="nav-link">Registrar</a>
+          <a href="{% url 'signup' %}" class="nav-link">Registrar</a>
         </li>
         {% endif %}
       </ul>
@@ -77,5 +76,7 @@
   </div>
 </nav>
 
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
