--- a/tasks/templates/signin.html
+++ b/tasks/templates/signin.html
@@ -69,16 +69,16 @@
 <div class="login-container">
   <h1>Login</h1>
 
-  <p>{{error}}</p>
+  <p>{{ error }}</p>
 
   <form action="/signin/" method="POST">
     {% csrf_token %}
     <div class="form-group">
-      <label for="id_username">Username:</label>
+      <label for="id_username">Nombre de usuario:</label>
       {{ form.username }}
     </div>
     <div class="form-group">
-      <label for="id_password">Password:</label>
+      <label for="id_password">Contraseña:</label>
       {{ form.password }}
     </div>
     <button>Login</button>
